--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -41,14 +41,13 @@ instance=Master
 interval=1
 signal=10
 
-# Memory usage
+# Battery indicator
 #
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-label= 
-#label=MEM AVAIL
-separator=false
-interval=30
+# The battery instance defaults to 0.
+[battery]
+label=⚡ 
+interval=10
+
 
 # Network interface monitoring
 #
@@ -76,12 +75,21 @@ interval=5
 min_width=CPU 100.00%
 #separator=false
 
+# Memory usage
+#
+# The type defaults to "mem" if the instance is not specified.
+[memory]
+label= 
+#label=MEM AVAIL
+separator=false
+interval=30
+
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 #[mediaplayer]
-#instance=spotify
+#instance=audacious
 #interval=5
 #signal=10
 
@@ -96,9 +104,9 @@ min_width=CPU 100.00%
 # Support multiple chips, though lm-sensors.
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-[temperature]
-label=CPU TEMP  
-interval=5
+#[temperature]
+#label=CPU TEMP  
+#interval=5
 
 # Key indicators
 #
@@ -118,12 +126,6 @@ interval=5
 #interval=once
 #signal=11
 
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[battery]
-label=⚡ 
-interval=10
 
 # Date Time
 #
