--- a/i3/.i3blocks.conf
+++ b/i3/.i3blocks.conf
@@ -24,10 +24,22 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME/$BLOCK_NAME
-separator_block_width=15
-markup=none
+command=/usr/lib/i3blocks/$BLOCK_NAME
+separator_block_width=10
+markup=pango
+align=center
 
+[Info]
+#label=Info 
+command=echo -e Arch Linux
+interval=30
+color=#5555FF
+
+[Kernel]
+label= 
+command=uname -r
+color=#FFFFFF
+interval=once
 
 # Volume indicator
 #
@@ -35,18 +47,14 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
+command=/usr/lib/i3blocks/volume/volume
 label= 
 instance=Master
 #instance=PCM
 interval=1
 signal=10
+color=#F7FE2E
 
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[battery]
-label=⚡ 
-interval=10
 
 
 # Network interface monitoring
@@ -59,18 +67,27 @@ interval=10
 #interval=10
 #separator=false
 
-[wifi]
-INTERFACE=wlp3s0
-label= 
+#[wifi]
+#INTERFACE=wlp3s0
+#label= 
+#interval=10
+#separator=false
+
+# Battery indicator
+#
+# The battery instance defaults to 0.
+[battery]
+command=/usr/lib/i3blocks/battery/battery
+label=⚡ 
 interval=10
-separator=false
 
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [cpu_usage]
-label=CPU  
+command=/usr/lib/i3blocks/cpu_usage/cpu_usage
+label=  
 interval=5
 min_width=CPU 100.00%
 #separator=false
@@ -79,19 +96,20 @@ min_width=CPU 100.00%
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
+command=/usr/lib/i3blocks/memory/memory
 label= 
-#label=MEM AVAIL
-separator=false
 interval=30
+color=#FF8000
 
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=audacious
-#interval=5
-#signal=10
+[mediaplayer]
+command=/usr/lib/i3blocks/mediaplayer/mediaplayer
+instance=audacious
+interval=5
+signal=10
 
 # OpenVPN support
 #
@@ -108,29 +126,18 @@ interval=30
 #label=CPU TEMP  
 #interval=5
 
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#KEY=CAPS
-#markup=pango
-#interval=once
-#signal=11
-
-#[keyindicator]
-#KEY=NUM
-#markup=pango
-#interval=once
-#signal=11
-
 
 # Date Time
 #
 [time]
-command=date '+  %H:%M %d-%h-%Y'
+command=date '+  %H:%M'
 interval=1
+color=#50C878
+separator=false
 
+[rofi-calendar]
+command=/usr/lib/i3blocks/rofi-calendar/rofi-calendar
+label= 
+interval=1
+color=#50C878
 
